tests/errmsgs/t8610.nim
discard """
  errormsg: "invalid type: 'typedesc[int]' for const"
"""
## bug #8610
const Foo = int
